File Name: CHANGES

05/22/2012 FASP 0.8.5:
- Fix a small bug in mkheaders*.
- Add Schwartz smoother.
- Add a tutorial example for BSR matrices. There is a bug in BSR ILU. Need to fix it!

05/20/2012 FASP 0.8.4:
- Revise matrix and rhs read/write routines.
- Create P1 FEM in dcsrvec2 format. Replace the old test problem with the new one. 
- Add more "write" routines for different formats in "core/src/io.c".
- A bug fix in "core/src/io.c" for a reading routine.
- Unify test problems in "test" and "tutorial". 
- Change test data: mat and rhs.

05/18/2012 FASP 0.8.3:
- Add safe-guard check for MaxIt and tol to prevent unexpected error in iterative methods.
- Change the format the input files in "test/ini" slightly.
- Make output of iterative methods more uniform.
- Add a precond_setup interface for setting up preconditioners; Revise iterative methods accordingly.
- Add a PCG tutorial example.

05/16/2012 FASP 0.8.2: 
- Fix a bug in refinement. Make generation of mesh_aux data structure work for any number of elements. 
- Add a few examples in "tutorial".
- Change inparam.itsolver_type to inparam.solver_type to make the name more logical.
- Change input file in "test/ini" for the new setting.
- Revise a few functions arguments which should be "const" but did not assigned as "const".
- Modify linked list data structure slightly.

05/13/2012 FASP 0.8.1: 
- Further optimizations on P1 FEM; more coming.
- Format source code in "test"; and some minor format and code changes.
- Fix a bug in src/io.c for BSR output.
- Clean up several BSR rouitnes, including their Doxygen. 

05/02/2012 FASP 0.8.0: 
- Auto indentation of sources, mostly.

05/01/2012 FASP 0.7.8: 
- Update Doxygen: Fix a few bugs in Doxygen.
- Update interface of GCG. 
- Clean up and update interfaces for vGMRES and vFGMRES.
- Clean up and update interfaces for PGMRES.
- Rewrite part of PMINRES.

05/01/2012 FASP 0.7.4: 
- Rewrite PBCGS for optimizing memory and CPU usage.

04/30/2012 FASP 0.7.3: 