@@ -32,7 +32,7 @@ int main (int argc, const char * argv[])
     // In this example, we read everything from a disk file:
     //          "./ini/its.dat"
     // See the reference manual for details of the parameters. 
-    fasp_param_init("ini/its.dat",&inparam,&itparam,NULL,NULL);
+    fasp_param_init("ini/its.dat",&inparam,&itparam,NULL,NULL,NULL);
 
     // Set local parameters
     const int print_level = inparam.print_level;
