@@ -2,7 +2,8 @@ File Name: CHANGES
 
 05/22/2012 FASP 0.8.5:
 - Fix a small bug in mkheaders*.
-- Add Schwartz smoother.
+- Add Schwarz smoothers.
+- Modify "test" and "tutorial" according to input requirement by Schwarz.
 - Add a tutorial example for BSR matrices. There is a bug in BSR ILU. Need to fix it!
 
 05/20/2012 FASP 0.8.4:
